--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_analytics: ^10.7.4
   firebase_database: ^10.3.8
   cloud_firestore: ^4.13.6
+  image_picker: ^1.0.7
 
 dev_dependencies:
   flutter_test:
